[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Towns/Hover.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Soldiers/Five_elements/5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Towns/2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Fonts/Roboto.tres" type="DynamicFont" id=5]
[ext_resource path="res://Town/Town.gd" type="Script" id=6]
[ext_resource path="res://Assets/Flags/Flag0.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="Town0" type="TextureButton"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 30.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="King" type="Sprite" parent="."]
visible = false
position = Vector2( 50, 50 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="TownName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolidersInTown" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -12.0
margin_right = 20.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="." to="." method="_on_Town0_pressed"]
